# orthomclx

./: .README.md.swp  .gitattributes  Makefile  README.md  pyproject.toml
scripts/: compare_fixture.py  compare_real_dataset.py
src/c/: build_similarity_indexes.c  indexed_coorthologs.c  indexed_inparalogs.c  indexed_orthologs.c  indexed_rbh.c  pairs_engine.c  parse_blast_compiled.c
src/mcl/: Makefile  ORTHOMCLX_VENDORING.md  config.status
src/mcl/doc/: Makefile
src/mcl/graphs/: Makefile
src/mcl/img/: Makefile
src/mcl/include/: Makefile
src/mcl/scripts/: Makefile
src/mcl/src/: Makefile
src/mcl/src/alien/: Makefile
src/mcl/src/clew/: Makefile
src/mcl/src/gryphon/: Makefile
src/mcl/src/impala/: Makefile
src/mcl/src/mcl/: Makefile
src/mcl/src/shcl/: Makefile  clmformat
src/mcl/src/shmcl/: Makefile
src/mcl/src/shmcx/: Makefile
src/mcl/src/shmcxquery/: Makefile
src/mcl/testing/: Makefile
src/mcl/util/: Makefile
src/orthomcl/: __init__.py  blast_parser.py  cli.py  compare_fixture.py  compare_real_dataset.py  compat.py  compile_similarities.py  evalue.py  fasta.py  groups.py  indexed_pairs.py  io.py  mcl.py  models.py  pairs.py  parse_blast_compiled.py  pipeline.py  rbh.py  similarity_indexes.py
tests/: test_blast_parser.py  test_compile_similarities.py  test_evalue.py  test_fasta.py  test_groups.py  test_indexed_coorthologs.py  test_indexed_inparalogs.py  test_indexed_orthologs.py  test_indexed_pairs.py  test_indexed_rbh.py  test_mcl.py  test_pairs.py  test_parse_blast_compiled.py  test_pipeline.py  test_rbh.py
(+57 files in other folders)
