[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "orthomclx"
version = "0.1.0"
description = "Modern C/Python rewrite of the OrthoMCL pipeline"
requires-python = ">=3.9"

[project.scripts]
orthomclx = "orthomcl.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
